# AdaTOcpp

./: КП_ТЯПиК ЛобееваМД ВоробьеваКВ КассинаМА.docx
AXX-main/: CMakeLists.txt  example_script.ads.bak  main.cpp  Грамматика.txt
AXX-main/include/axx/AST/: AST.hpp  ASTNode.hpp  ASTNodePublic.hpp
AXX-main/include/axx/codegen/: CodeEmittingNodeVisitor.hpp  CodeGenerator.hpp
AXX-main/include/axx/interface/: CodeGeneratorInterface.hpp  LexerInterface.hpp  NodeVisitorInterface.hpp  ParserInterface.hpp  SemanticAnalyzerInterface.hpp  VisitableNodeInterface.hpp
AXX-main/include/axx/lexer/: FileData.hpp  Lexer.hpp  LexerStates.hpp
AXX-main/include/axx/parser/: Parser.hpp
AXX-main/include/axx/semantic/: SemanticAnalyzer.hpp  SemanticVisitor.hpp  Symbol.hpp
AXX-main/src/axx/: AST.cpp  ASTNode.cpp  CodeEmittingNodeVisitor.cpp  CodeGenerator.cpp  FileData.cpp  Lexer.cpp  LexerStates.cpp  Parser.cpp  SemanticAnalyzer.cpp  SemanticVisitor.cpp  Symbol.cpp  Token.cpp
